Collapsing second header in StoryView when there's nothing there (issue #357).

--- a/client/src/views/story-view.scss
+++ b/client/src/views/story-view.scss
@@ -25,6 +25,7 @@
             float: right;
             cursor: pointer;
             color: #666666;
+            margin-top: 0.10em;
 
             &:hover {
                 color: #eeeeee;
